--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="keywords" content="汕头自学考试网,汕头自学考试,汕头自考办,自考,自考成绩查询,自考365,自考网,自考报名自考专业,成人自考,自考本科,自考查询,自考查分">
 <meta name="description" content="创建于2006年7月1日,是一家免费公益性质的自考信息交流网站. 网站自成立以来,为广大自考生提供各种自考信息和学习资料,自考成绩查询,自考专业自考安排和考试用书,促进考生交流,汕头自考网是汕头自考人士建立的网站！宗旨是帮助广大自考生以更快的速度通过自考！">
 <meta name="google-site-verification" content="dUR9npCbkQzeOJrYjAJj5trsxxXSzqB_ee0pVIEZEiI" />
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <script src="/JS/prototype.js"></script>
 <script src="/JS/scriptaculous.js"></script>
 <script src="/JS/checklogin.js"></script>
@@ -62,7 +62,7 @@
 </Select> 
     <Input id=Field type=hidden value=Title name=Field></td>
     <td><input id=Submit name=Submit type="image" src="/skin/web/button_search.gif" /></td>
-    <td><A href="" name=StranLink>繁體中文</A>
+    <td><A href="" name=StranLink>繁篦中文</A>
 <script language="javascript" src="/js/gb_big5.js"></script></td>
   </tr>
 </table>
