--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src="/JS/prototype.js"></script>
 <script src="/JS/scriptaculous.js"></script>
 <script src="/JS/checklogin.js"></script>
-<link href='/Skin/DefaultSkin.css' rel='stylesheet' type='text/css'> <script language='JavaScript' type='text/JavaScript' src='/js/menu.js'></script>
+<link href='/skin/DefaultSkin.css' rel='stylesheet' type='text/css'> <script language='JavaScript' type='text/JavaScript' src='/js/menu.js'></script>
 
 <script type="text/javascript" src="/skin/web/changepart.js"></script>
 </head>
