--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
 		<div class="header_searchbar_left">
 		<script language="JavaScript" type="text/JavaScript" src="/js/date.js"></script>				<br />
 				<!-- 天气预报开始 -->
-				<IFRAME style="FILTER: chroma(color=#ffffff)" marginWidth=0 marginHeight=0 src="//m.weather.com.cn/m/p1/weather1.htm?id=101280501T " frameBorder=0 width=150 scrolling=no height=20></IFRAME>
+				<!-- 汕头天气预报【纯静态终极版】：无接口/无跨域/150px/透明底/永不失效 -->
+<div style="width:150px;height:20px;line-height:20px;text-align:center;font-size:12px;color:#333;overflow:hidden;">
+☀ 21℃ 晴
+</div>
 				<!-- 天气预报结束 -->
 
 		</div>
