--- a/index.html
+++ b/index.html
@@ -690,7 +690,9 @@ document.write("正在举行哦！");
 </div>
 </div>
 <div class=main_mainbar48_body align=center>
+<!--
 <script language="javascript" src="/AD/200604/right2.js"></script> 
+-->
 </div>
 <div class=main_mainbar4_foot>
 </div>
@@ -871,10 +873,10 @@ document.write("正在举行哦！");
           <td>
           <P align=center>声明：<a title="声明：本站是由汕头自考人士主办的公益网站" target="_blank" href="//www.stzikao.com">本站是由汕头自考人士主办的公益网站</a><br> 汕头自考网版权所有 Copyright &copy; 2006-2020 <a title="汕头自考网" target="_blank" href="//www.stzikao.com">stzikao</a>. All rights reserved.<br>   交流群：27052471 <a target="_blank" href="https://beian.miit.gov.cn/">粤ICP备14009918号-2</a><br>
 <script language='javascript' src='//www.stzikao.com/ad/tongji.js'></script> </P></td>
-          <td width=200>
+        <!--  <td width=200>
 <P align=center>
 <script>var caid="8750";</script> 
-          <script src="//www.315safe.com.cn/ca.js"></script></P></td>
+          <script src="//www.315safe.com.cn/ca.js"></script></P></td> -->
         </tr>
       </table>
 </P><div class=foot_copyright_foot>
